# hello-dbt

./: Makefile  README.md  pyproject.toml
hello_dbt/: dbt_project.yml  env.sh  packages.yml  profiles.yml
hello_dbt/macros/: test_equality.sql
hello_dbt/mock/: people.json
hello_dbt/models/: sources.yml
hello_dbt/models/raw/: raw_people.sql
hello_dbt/models/refined/: rfn_people.sql  schema.yml
hello_dbt/seeds/: expected_people.csv  people.csv
hello_dbt/tests/: rfn_people_should_concat.sql
