[tool.poetry]
name = "hello-dbt"
version = "0.1.0"
description = ""
authors = ["Pee Tankulrat <8246751+PiiTan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hello_dbt"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.5.2"


[tool.poetry.group.dev.dependencies]
mock-data-generator = "^1.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
